[package]
name = "mcm"
version = "0.1.2"
edition = "2021"
description = "mcm = Markdown Contents Manager"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
comrak = "0.16"
glob = "0.3.1"
regex = "1.7.1"
